<resources>
    <string name="app_name">ApplicationBNET</string>
    <string name="buy_location">Где купить</string>
    <string name="example_description">Description</string>
    <string name="example_title">Title</string>
    <string name="list">Список</string>
    <string name="search_icon_name">Search</string>
    <string name="list_item_image">List item image</string>
    <string name="add_in_favorite">Add in favorite</string>
    <string name="info_icon">Info icon</string>
    <string name="product_image">Product image</string>
</resources>