<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="157dp"
        android:layout_height="297dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="16dp"
        android:elevation="4dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/itemImage"
                android:layout_width="133dp"
                android:layout_height="78dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="12dp"
                android:layout_marginBottom="207dp"
                android:elevation="4dp"
                android:src="@drawable/image13"
                android:contentDescription="@string/list_item_image" />

            <TextView
                android:id="@+id/itemTitle"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/roboto_medium"
                android:lineSpacingExtra="7sp"
                android:text="@string/example_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/itemDescription"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto"
                android:lineSpacingExtra="3sp"
                android:maxLines="9"
                android:text="@string/example_description"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/grey"
                android:textSize="12sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</FrameLayout>